# aether

./: .gitignore  README.md  REFACTORING_SUMMARY.md  Technical_Overview.md  Theory.md  cli.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
aether/: __init__.py  config.py  export.py  extract.py  io.py  preprocess.py  ranking.py  weight.py
benchmarks/: benchmark_specular.py
f117_results/: README.txt  scatterers.csv  scatterers.json  visualization.ply
misc/: Theory.md
tests/: README.md  conftest.py
tests/integration/: test_cli.py  test_mesh_pipeline.py  test_plate.py  test_reflection_pipeline.py
tests/unit/: test_advanced_mesh.py  test_config.py  test_edge_detection.py  test_extract.py  test_extract_extended.py  test_io.py  test_preprocess.py  test_ranking.py  test_reflection.py  test_rendering.py  test_weight_extended.py
