[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aether"
version = "0.0.1"
description = "Identify scattering centres on 3D drone meshes"
requires-python = ">=3.10"
dependencies = [
  "trimesh>=4.7.1",
  "numpy>=2.3.1",
  "click>=8.1.0,<9.0",
  "numba>=0.57.0,<1.0",
  "rich>=14.0",
  "pandas>=2.1.0,<3.0",
]
[project.optional-dependencies]
dev = [
  "pytest>=8.4.1",
  "black>=25.1.0",
  "isort>=6.0.1",
  "flake8>=7.3.0",
]
[project.scripts]
aether = "cli:main"
